# gambiarra-arena

./: CLAUDE.md  PASSO_A_PASSO.md  QUICKSTART.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
client-typescript/: Dockerfile  README.md  package.json  tsconfig.json
client-typescript/src/: cli.ts
client-typescript/src/net/: ws.ts
client-typescript/src/runners/: lmstudio.ts  mock.test.ts  mock.ts  ollama.ts  types.ts
client-typescript/src/scripts/: simulate.ts
server/: package.json
server-python/: .env.example  .gitignore  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  requirements.txt
server-python/alembic/: env.py
server-python/scripts/: seed.py
server-python/src/: config.py  database.py  main.py
server-python/src/api/: routes.py
server-python/src/core/: metrics.py  rounds.py  votes.py
server-python/src/models/: __init__.py  metrics.py  participant.py  round.py  session.py  vote.py
server-python/src/schemas/: http.py  websocket.py
server-python/src/websocket/: hub.py
server-python/tests/: conftest.py  test_schemas.py  test_vote_manager.py
server/prisma/: schema.prisma
server/src/: index.ts
server/src/core/: rounds.ts
server/src/http/: routes.ts
server/src/scripts/: seed.ts  test-votes.ts
server/src/ws/: hub.ts
telao/: tailwind.config.js  vite.config.ts
telao/src/: App.tsx
telao/src/components/: AdminPanel.tsx  Arena.tsx  ParticipantCard.tsx  SvgRenderer.tsx  Toast.tsx
telao/src/hooks/: useToast.ts
(+1 files in other folders)
